prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/interp_str_wrong_template.diag.txt
ERROR: expected 'IDENTIFIER'
testData/diagnostics/interp_str_wrong_template.nut:3:12

println($"{{{{{{{{")
            ^


